# merge-veloren

./: .gitignore  .gitlab-ci.yml  .~lock.weaponstats.csv#  CHANGELOG.md  Cargo.toml  items.csv  rust-toolchain
.gitlab/CI/: build.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml  release.yml
assets/common/: npc_names.json  recipe_book.ron
assets/common/loot_tables/: loot_table_armor_misc.ron  loot_table_cave_large.ron  loot_table_crafting.ron  loot_table_cultists.ron  loot_table_humanoids.ron  loot_table_villager.ron
assets/voxygen/: item_image_manifest.ron
assets/voxygen/audio/: sfx.ron
assets/voxygen/i18n/: PL.ron  de_DE.ron  en.ron  es_ES.ron  es_la.ron  fr_FR.ron  it_IT.ron  pt_BR.ron  ru_RU.ron  tr_TR.ron  zh_CN.ron  zh_TW.ron
assets/voxygen/shaders/: particle-vert.glsl
assets/voxygen/voxel/: humanoid_armor_back_manifest.ron  humanoid_armor_belt_manifest.ron  humanoid_armor_chest_manifest.ron  humanoid_armor_hand_manifest.ron  humanoid_armor_pants_manifest.ron  humanoid_armor_shoulder_manifest.ron  humanoid_main_weapon_manifest.ron  slime_center_manifest.ron  sprite_manifest.ron
chat-cli/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: cmd.rs  effect.rs  generation.rs  lib.rs  loadout_builder.rs  lottery.rs  metrics.rs  npc.rs  outcome.rs  recipe.rs  state.rs
common/src/assets/: mod.rs
common/src/comp/: ability.rs  agent.rs  body.rs  character_state.rs  controller.rs  mod.rs  player.rs  stats.rs
common/src/states/: charged_melee.rs  combo_melee.rs  dash_melee.rs  leap_melee.rs  mod.rs  repeater_ranged.rs  utils.rs  wielding.rs
common/src/sys/: agent.rs  character_behavior.rs  combat.rs  melee.rs  mod.rs  (+2 more)
network/src/: api.rs
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server/src/: character_creator.rs  cmd.rs  lib.rs  state_ext.rs  test_world.rs
snap/: snapcraft.yaml
snap/local/: README.md
tools/: Cargo.toml
tools/src/: main.rs
voxygen/: Cargo.toml
voxygen/src/: lib.rs  main.rs  run.rs  session.rs  settings.rs  window.rs
voxygen/src/anim/: Cargo.toml
voxygen/src/anim/src/: lib.rs
voxygen/src/anim/src/character/: alpha.rs  charge.rs  leapmelee.rs  spin.rs  wield.rs
voxygen/src/anim/src/golem/: mod.rs  roll.rs  spinmelee.rs
voxygen/src/anim/src/slime/: idle.rs  jump.rs  mod.rs  run.rs
voxygen/src/audio/: channel.rs  mod.rs
voxygen/src/audio/sfx/: mod.rs
voxygen/src/audio/sfx/event_mapper/: mod.rs
voxygen/src/audio/sfx/event_mapper/combat/: mod.rs  tests.rs
voxygen/src/audio/sfx/event_mapper/movement/: mod.rs
voxygen/src/hud/: bag.rs  chat.rs  crafting.rs  group.rs  hotbar.rs  img_ids.rs  item_imgs.rs  minimap.rs  mod.rs  overhead.rs  overitem.rs  settings_window.rs  skillbar.rs  slots.rs  social.rs  util.rs
voxygen/src/menu/char_selection/: mod.rs  ui.rs
voxygen/src/menu/char_selection/ui/: mod.rs
voxygen/src/menu/main/: mod.rs  ui.rs
voxygen/src/menu/main/ui/: mod.rs
voxygen/src/mesh/: greedy.rs  segment.rs  terrain.rs
voxygen/src/render/: mesh.rs  mod.rs  model.rs  renderer.rs  texture.rs
voxygen/src/render/pipelines/: figure.rs  fluid.rs  lod_terrain.rs  mod.rs  particle.rs  postprocess.rs  sprite.rs  terrain.rs  ui.rs
voxygen/src/scene/: lod.rs  mod.rs  particle.rs  simple.rs  terrain.rs
voxygen/src/scene/figure/: cache.rs  load.rs  mod.rs
voxygen/src/ui/: event.rs  mod.rs
voxygen/src/ui/graphic/: mod.rs
world/: Cargo.toml
world/src/: lib.rs
(+55 files in other folders)
