[package]
name = "veloren_chat_cli"
version = "0.7.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

[dependencies]
client = { package = "veloren_client", path = "../client" }
common = { package = "veloren_common", path = "../common" }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["fmt", "chrono", "ansi", "smallvec"] }
