[package]
name = "veloren-voxygen"
version = "0.7.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Imbris <imbrisf@gmail.com>"]
edition = "2018"
default-run = "veloren-voxygen"
# Cargo thinks it should build the voxygen binary even when a specific bench is specified for building
# Uncomment below and comment out default-run if you want to avoid this
# autobins = false

[features]
singleplayer = ["server"]
tweak = ["const-tweaker"]
hot-anim = ["anim/use-dyn-lib"]

default = ["singleplayer", "msgbox"]

[dependencies]
common = { package = "veloren-common", path = "../common" }
client = { package = "veloren-client", path = "../client" }

anim = { package = "veloren-voxygen-anim", path = "src/anim", default-features = false }

# Graphics
wgpu = {git="https://github.com/gfx-rs/wgpu-rs.git"}
zerocopy = "0.3"
shaderc = "0.6.2"
winit = { version = "0.22.2", features = ["serde"] }
conrod_core = { git = "https://gitlab.com/veloren/conrod.git" }
conrod_winit = { git = "https://gitlab.com/veloren/conrod.git" }
euc = { git = "https://github.com/zesterer/euc.git" }

# ECS
specs = { git = "https://github.com/amethyst/specs.git", rev = "7a2e348ab2223818bad487695c66c43db88050a5" }
specs-idvs = { git = "https://gitlab.com/veloren/specs-idvs.git", branch = "specs-git" }

# Mathematics
vek = { version = "0.12.0", features = ["platform_intrinsics", "serde"] }

# Controller
gilrs = { version = "0.7", features = ["serde"] }

# Singleplayer
server = { package = "veloren-server", path = "../server", optional = true }

# Utility
futures = "0.3"
failure = "0.1.6"
dot_vox = "4.0"
image = { version = "0.23.8", default-features = false, features = ["ico", "png"] }
serde = "1.0"
serde_derive = "1.0"
ron = { version = "0.6", default-features = false }
guillotiere = "0.5.2"
msgbox = { git = "https://github.com/bekker/msgbox-rs.git", default-features = false, rev = "68fe39a", optional = true }
directories-next = "1.0.1"
num = "0.2"
backtrace = "0.3.40"
rand = "0.7"
treeculler = "0.1.0"
rodio = { version = "0.11", default-features = false, features = ["wav", "vorbis"] }
cpal = "0.11"
crossbeam = "=0.7.2"
hashbrown = { version = "0.7.2", features = ["rayon", "serde", "nightly"] }
chrono = "0.4.9"
bincode = "1.2"
deunicode = "1.0"
uvth = "3.1.1"
# vec_map = { version = "0.8.2" }
const-tweaker = { version = "0.3.1", optional = true }
itertools = "0.9.0"

# Logging
tracing = "0.1" 
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "chrono", "ansi", "smallvec" , "tracing-log"] }
tracing-log = "0.1.1"
tracing-appender = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.1.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
criterion = "0.3"
git2 = "0.13"
world = { package = "veloren-world", path = "../world" }

[[bench]]
name = "meshing_benchmark"
harness = false
